# rust-llvm-practises

./: .gitignore  Cargo.toml  README.md
docs/: notes.md  rust-current.md  rust-history.md
docs/resources/: blog.md
helloworld/: README.md  main.ll
helloworld/docs/: refs.md
helloworld/src/: main.rs
llvm-rust-helloworld/: Cargo.toml  README.md  README.zh-CN.md  main.ll
llvm-stdlib/: Cargo.toml
llvm-stdlib/src/: main.rs
llvm-stdlib/stdlib/: charj.c  lib.c
llvm-wasm/: .gitignore  Cargo.toml  README.md  index.html
llvm-wasm/src/: main.rs
offical-demo/: Cargo.toml  README.md
pass/: Cargo.toml  README.md
stdlib/src/: main.rs
stdlib/stdlib/: Makefile
tools/control_flow_graph/: .main.dot  README.md  callgraph.dot
wasm/: Cargo.toml  README.md  hello.asm  hello.wat  index.html
wasm/demos/: CMakeLists.txt  hello.c
wasm/src/: main.rs
